tests/NormalTests/paczka1/small_fuzzy/36151126.err
Error in line 8: P6uwmw A365 71,2
Error in line 15: iSB A783 42,2
